# Paper-Notes

./: .gitignore  README.md  pyproject.toml  send_xiaohongshu.sh
blog/ai-progress-and-recommendations/: README.md  source.txt  twitter_post.txt
blog/brainwash-your-agent-how-we-keep-the-memory-clean/: README.md  source_content.md  twitter_post.txt
blog/cammel_browser_analysis/: README.md  ai_friendly_snapshot_analysis.md  twitter_post.txt  websocket_communication_protocol.md
blog/claude-prompt-engineering-best-practices/: README.md  source_content.md  twitter_post.txt
blog/kimi-k2-thinking/: README.md  article.md  twitter_post.txt
blog/kimi-linear-attention-interview/: README.md  source.txt  twitter_post.txt
blog/the-future-of-agi/: README.md  source.txt  twitter_post.txt
blog/unlocking-financial-insights-with-finch/: README.md  source.html  source_content.md  twitter_post.txt
book/zero-to-sold/: README.md  content.txt
docs/: paper_analysis_workflow.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
papers/001-example-paper/: README.md  twitter_post.txt
papers/002-context-engineering-2.0/: README.md  paper_content.txt
papers/agent-evolver/: README.md  source_content.md  twitter_post.txt
papers/ai-agents-vs-agentic-ai/: README.md  image_prompt.md  source_content.md
papers/code-execution-with-mcp/: README.md  (+4 more)
prompts/: one-paper-one-sentence.md
scripts/: download_images.py  extract_references.py  html_to_md.py  prepare_content.py  read_paper.py
x_content/: twitter_post.txt
(+16 files in other folders)
